added borders; consistent design across all pages

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+  background-image: url(assets/cedarbackground.jpg);
+  /*background-repeat: no-repeat;*/
+  background-size: cover;
+  background-color: tan;
+  background-blend-mode: luminosity;
+}
+
 ul {
   list-style: none;
   line-height: 2.7em;
@@ -18,6 +26,8 @@ a:visited {
   justify-content: center;
   margin: 1em;
 }
+
+/*header style!*/
 .header {
   background-color: #f9b77c;
   padding: 1em 2em;
@@ -27,6 +37,7 @@ a:visited {
   font-family: Garamond;
   color: #3d2e15;
   font-size: 40px;
+  border: solid white 4px;
 }
 
 .nav  {
@@ -35,6 +46,7 @@ a:visited {
   margin-bottom: 1em;
   display: flex;
   justify-content: space-around;
+  border: solid white 4px;
 }
 
 .merch-button,.sales-button,.home-button {
@@ -42,36 +54,59 @@ a:visited {
   background-color: #f9b77c;
 }
 
-.col1,.col2
-{
-  float: left;
-  /*background-color: #eee;*/
-  margin-bottom: 1em;
-  margin-left: 3%;
+/*end header style*/
+
+/*styling main grid*/
+
+
+.content {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row-reverse;
+  align-items: center;;
+  margin: .5em;
+}
+
+.col1,.col2 {
+  border: solid white 4px;
 }
 
 .col1 {
   width: 20%;
+  height: 40%;
   padding: .5em;
   line-height: 2em;
   background-color: #f9b77c;
   color: #3d2e15;
   font-family: helvetica;
+  margin-left: 4em;
+  margin-right: 5em;
 }
 
 .col2 {
-  width: 27%;
+  width: 30%;
   background-color: #f9b77c;
   color: #3d2e15;
   font-family: helvetica;
+  margin-right: 1em;
 }
 
-.col3 {
-  float: right;
-  width: 45%;
+/*.col3 {
+  width: 30%;
+  margin-right: 3em;
+  margin-left: 5em;
+}*/
+
+.col4 {
+  width: 48%;
   text-align: center;
   color: #3d2e15;
+  background-color: white;
   font-style: italic;
+  font-size: 40px;
+  margin-left: 2em;
+  margin-right: 2em;
+  border: solid white 4px;
 }
 
 .footer
@@ -80,6 +115,8 @@ a:visited {
   padding: .5em .9em;
   color: #f9b77c;
   background-color: #3d2e15;
+  margin-top: 1em;
+  border: solid white 4px;
 }
 
 /*style for sales.html*/
@@ -88,6 +125,7 @@ a:visited {
   display: flex;
   justify-content: center;
   margin: 1em;
+  background-color: white;
 }
 
 
@@ -95,6 +133,7 @@ a:visited {
   display: flex;
   justify-content: center;
   margin: 1em;
+  background-color: white;
 }
 
 .sales-col1,.sales-col2,.sales-col3 {
@@ -117,7 +156,7 @@ a:visited {
 
 .tshirt {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   margin: 1em;
   font-style: italic;
   font-weight: bold;
