--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(assets/cedarbackground.jpg);
+  background-image: url(assets/cookiebg.jpg);
   /*background-repeat: no-repeat;*/
   background-size: cover;
   background-color: tan;
@@ -160,6 +160,6 @@ a:visited {
   margin: 1em;
   font-style: italic;
   font-weight: bold;
-  color: #3d2e15;
+  color: white;
   font-size: 50px;
 }
